# catphan404

./: CLI_USAGE.md  New XVI Slider.py  README.md  ctp401.json  ctp515.json  high_contrast.json  pyproject.toml  requirements.txt  uniformity.json  uniformity_ctp401_high_contrast_ctp515.json  uniformity_high_contrast_ctp401_ctp515.json
.github/: copilot-instructions.md
Catphan404/: __init.py__.py  analysis.py  cli.py  ctp401_analyzer.py  ctp515_analyzer.py  geometry.py  high_contrast.py  io.py  low_contrast.py  slice_thickness.py  uniformity.py
Catphan404/plots/: plotters.py
Catphan404/reporting/: builder.py
Catphan404/test_scans/: linearity.dcm  linepairs.dcm  low_contrast.647055  uniformity.dcm
Catphan404/utils/: image.py  math.py
daylogs/: CHANGES_2026-01-20.md  CHANGES_2026-01-23.md
